Letzte Deutsch-Stunde + pdf-builder erstellt

--- a/Deutsch/Hiob/02.02.2014 - Die Singer-Kinder.md
+++ b/Deutsch/Hiob/02.02.2014 - Die Singer-Kinder.md
@@ -10,17 +10,18 @@ Jonas
 -   Körperlich "gesund" (S. 24) ( → wird später Soldat)
 -   Welt erscheint ihm flach → *Sachlichkeit*
 -   "Ich möchte ein Bauer sein" (S. 25) → *Heimatverbunden*
--   "Trinkt wie einem riesigen Säugling ähnlich" (S.26) → *Nicht
-    Pflichtbewusst*
+-   "Trinkt wie einem riesigen Säugling ähnlich" (S.26) →  *Nicht Pflichtbewusst*
 -   "Einem riesigen Säugling ähnlich" (S. 26) → *Naiv*
 -   Möchte Bauer oder Soldat werden
 -   Gekräuseltes Haar, kleine schwarze Augen
 -   "Ich möchte Bauer sein und mit Mädchen schlafen"
 -   Ungelenk, grobschlächtig, immer hungrig
 -   Beschränkt
+-   Assimilation an die russische Umwelt (Bauer, Kosak)
+-   Verwurzelung in der Heimat
 
-Schemarjah
-----------
+Schemarjah / Sam
+----------------
 
 -   "*Schlau* wie ein Fuchs" (S. 16), hellwach
 -   "Zarte Geschicklichkeit" (S. 16) → *Handfertig begabt*
@@ -31,6 +32,9 @@ Schemarjah
 -   Geschäftssinn
 -   "Will ein Jude sein wie mein Vater"
 -   "Ich möchte ein reicher Mann sein und das Leben sehen" → Fernweh
+-   Zuerst Verhaftetsein im Judentum ("Will ein Jude sein wie mein Vater")
+-   Identitätswechsel zum "American boy"
+-   Amerika als "neue Religion"
 
 Mirjam
 ------
@@ -40,6 +44,9 @@ Mirjam
 -   fällt "in die Blickfelder der Offiziere" (S.22) → *Hübsch*
 -   *"Neugierig"* (S.23)
 -   Gelber Schal (Auffällig, Zeichen der Prositution im Mittelalter)
+-   Rebellion gegen traditionelle Werte
+-   Verleugnung ihrer jüdischen Identität
+-   Autonomes Leben nach dem Lust-Prinzip (Hedonistisch)
 
 Menuchim
 --------
@@ -51,4 +58,10 @@ Menuchim
 -   Roth verzichtet vermutlich auf einen Vergleich, da Menuchim sich im
     Buch sehr stark charakterlich wandelt. Weiterhin würde ein
     Tiervergleich die Handlung des Buchs vorweg nehmen.
+
+Deutung
+-------
+
+Warnung vor Aufgabe der jüdischen Identität alle drei Alternativentwürfe
+scheitern bzw. werden in einem kritischen Licht dargestellt.
 
