Geschichte: Umsortierung + Korrekturen

--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/03.12.2013 - Robert Ide 'Geteilte Träume'.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/03.12.2013 - Robert Ide 'Geteilte Träume'.md
@@ -6,7 +6,7 @@ Analyse
 
 Der vorliegende Text "Geteilte Träume" ist der Erfahrungsbericht von
 Robert Ide, welcher 2007 veröffentlicht wurde. Robert Ide wurde 1975 im
-sächsichen Marienberg geboren. Der Text stellt also die Situation der
+sächsischen Marienberg geboren. Der Text stellt also die Situation der
 Ostdeutschen empirisch anhand den Erfahrungen des Autors dar.
 
 Thematisch befasst sich der Autor mit der Trennung von Menschen aus dem
@@ -16,7 +16,7 @@ zwischen West- und Ostdeutschen.
 Im Weiteren wird der Einfachheit halber von Ostdeutschland geredet,
 gemeint ist damit aber das Gebiet der Ehemaligen "Deutschen
 Demokratischen Republik". Westdeutschland ist dieser Analogie folgend
-das Gebiet der vor der deutschen Wiedervereingung existierenden
+das Gebiet der vor der deutschen Wiedervereinigung existierenden
 Bundesrepublik Deutschland (ab dem 03.10.1990).
 
 Am Anfang des Textes wird beispielhaft von der Frau Katja berichtet,
@@ -33,9 +33,9 @@ Westdeutschland Lebenden.
 
 Am Ende des vorliegenden Textes zieht der Autor ein allgemeines Fazit.
 Laut des Fazits stehen die jüngeren Ostdeutschen "mit beiden Beinen in
-Westdeutschland". Trotzdessen besteht aber noch eine Heimatverbundenheit
-und eine Unzufriedenheit mit der Situation der Osdeutschen Bundesstaaten
-bzw. deren Westintegration
+Westdeutschland". Trotz dessen besteht aber noch eine Heimat-Verbundenheit
+und eine Unzufriedenheit mit der Situation der Ostdeutschen Bundesstaaten
+bzw. ihre Westintegration
 
 Um das vorhin dargestellte zu präzisieren lässt sich die Situation der
 Kinder, welche in nach Westdeutschland umgezogen sind wie nachfolgend
@@ -43,8 +43,8 @@ beschreiben. Es herrscht laut dem Autor eine Zerrissenheit zwischen
 beider Parteien, da zum einen die Heimat im Osten liegt, die bessere
 Arbeit allerdings in Westdeutschland. Weiterhin überdecken schlechte
 Erfahrungen mit Firmen, Vermietern und Krankenkassen die Freude über die
-Wiedervereinigung. Den Eltern in Ostdeutschland bleibt als einzes nur
-der Stolz über den Erfolg der nach Westendeutschland gezogenen Kinder.
+Wiedervereinigung. Den Eltern in Ostdeutschland bleibt als einziges nur
+der Stolz über den Erfolg der nach Westdeutschland gezogenen Kinder.
 Laut dem Autor äußert sich bei beiden Parteien ein
-Minderwertigkeits-Gefühl, da man sich in der Hierachie niederer als die
-Menschen aus Westdeutschland anssieht.
+Minderwertigkeitsgefühl da man sich in der Hierarchie niederer als die
+Menschen aus Westdeutschland ansieht.
