--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/05.12.2013 - Streit um die neue Ostpolitik.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/05.12.2013 - Streit um die neue Ostpolitik.md
@@ -8,7 +8,7 @@ Egon Bahr
     (bewussetes Paradoxum)
 -   BRD = "besserer" Staat (wird sich auf Dauer auch friedlich
     durchsetzen)
--   Orientierung der DDR soll Langfristig sich an der BRD Orientierung
+-   DDR soll Langfristig sich an der BRD orientieren
 -   BRD soll sich dennoch an die DDR annähern
 -   "Die Zone muss sich mit Zustimmung der Sowjets transformieren" =
     Schritt zur Wiedervereinigung
@@ -17,12 +17,12 @@ Egon Bahr
 Willy Brandt
 ------------
 
--   Hitlerregime = Nationaler Verrat
+-   Hitler Regime = Nationaler Verrat
 -   Deutschland hat ein Recht aus Selbstbestimmung
 -   Miteinander soll gefördert werden
 -   Ein geregeltes Miteinander ist unabdingbar (Nebeneinander →
     Miteinander)
--   Zusammenarbeit mit Osten → Beruhigung des Ost- Westkonflikts
+-   Zusammenarbeit mit Osten → Beruhigung des Ost-West-Konflikts
 -   Gespräche zwischen beide Seiten
 -   Status der Stadt Berlin muss unangetastet bleiben
 
@@ -33,7 +33,7 @@ Freiherr von und zu Guttenberg
 -   Schutz der NATO bröckelt durch Anerkennung des Osten
 -   Ostgrenze ist ungerecht
 -   Annäherung = Scheinfrieden
--   Siegerseite = DDR → Unterwerfung der BRD gegenüber der DDR
+-   Sieger-Seite = DDR → Unterwerfung der BRD gegenüber der DDR
 -   Unmöglichkeit einer Wiedervereinigung
 -   Angst, dass die UdSSR Europa einnimmt (Militärische Bedrohung)
 
@@ -48,10 +48,10 @@ Brandt aber ein gewählter und demokratisch Legitimierter Volksvertreter
 war ist davon auszugehen, dass die Mehrheit des Volks hinter ihm stand
 und Brandts Ansichten teilt. Die Tatsache, dass die Bevölkerung keine
 Aufstände durchführte lässt die These, dass Brandt einen Verrat
-durchführe als sehr unbegründet darstehen. Eine "Annäherung an eine
-Siegerseite" wirkt so, als wenn sich die deutsche Nation im Krieg
+durchführe als sehr unbegründet dastehen. Eine "Annäherung an eine
+Sieger Seite" wirkt so, als wenn sich die deutsche Nation im Krieg
 befinde. Zwar herrscht eine große Anfeindung zwischen Ost- und West. Ein
 neutrale Position ist meiner Meinung nach daher die einzige Möglichkeit
-eine Eskalationn zu verhindern. Die Einseitige Öffnung wäre die direkte
+eine Eskalation zu verhindern. Die Einseitige Öffnung wäre die direkte
 Provokation einer Eskalation.
 
