--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/06.02.2014 - UdSSR.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/06.02.2014 - UdSSR.md
@@ -1,25 +1,25 @@
 Kenndaten zur Union der Sozialistischen Sowjetrepubliken
 =======================================================
-   
+
 Hisorische Kenndaten
 ------------------------------
-   
+
 ### 1917:
 
 -   Russische Oktoberrevolution
 -   Lenin verkündete den sofortigen Rückzug aus dem Krieg
--   Die Sowjetunion vertrat einen Kurs, nach welchen auf sämtliche 
+-   Die Sowjetunion vertrat einen Kurs, nach welchen auf sämtliche
     Gebietsansprüche und Kriegsentschädigungen verzichtet wurde
 
 ### 03.03.1918:
 
 -   Russland stimmte dem erzwungenen "Frieden von Brest-Litowsk" zu
-    → Gebietsabtretungen, Kriegsentschädigungen, Befreiung aller 
+    → Gebietsabtretungen, Kriegsentschädigungen, Befreiung aller
       Kolonialrechte
 
 ### 1920:
 
--   Im Bürgerkrieg besiegten die "Roten" die politisch zerplitterte
+-   Im Bürgerkrieg besiegten die "Roten" die politisch zersplitterte
     gegenrovulutionären "Weißen"
 
 ### 1922:
@@ -33,36 +33,36 @@ Hisorische Kenndaten
 
 ### 1929 (- 1953)
 
--   Stalin wurde Alleinherrscher, nachdem dieser alle Konkurrenten 
+-   Stalin wurde Alleinherrscher, nachdem dieser alle Konkurrenten
     ausschaltete
 -   "Regierte mit Terror und Gewalt"
 
-   
+
 Kenndaten zum Politischen System
 -------------------------------
-   
--   Durch die Gründung der UdSSR wurden 400-Jahre Zarenherrschaft 
+
+-   Durch die Gründung der UdSSR wurden 400-Jahre Zarenherrschaft
     beendet
 -   Industrialisierung mit planwirtschaftlichen Methoden
 -   Kollektivierung der Landwirtschaft
 -   Private Produktionsmittel → Gemein- oder Staatseigentum
-   
+
 Methodik der Führungselite
 -------------------------
-   
+
 -   Politische Säuberungen innerhalb der KPdSU
 -   "Skrupelloser Machtbehauptungswille lähmten die Kräfte der
     Gesellschaft und beschnitten die Rechte der Einzelnen"
--   
+-
 
 Gulag
 -----
 
 -   Hauptverwaltung des sowjetischen Straflagersystem
--   Existierten während der 1920er-Jahren und nach dem Zweiten 
+-   Existierten während der 1920er-Jahren und nach dem Zweiten
     Weltkrieg
 -   Millionen von Menschen wurden interniert
--   Häftlinge mussten Zwangsarbeitleisten, welche häufig zum Tode
+-   Häftlinge mussten Zwangsarbeit leisten, welche häufig zum Tode
     führte
 -   Offizielle Auflösung: 1956 (Trotzdem bestanden noch weiterhin einige
     Zwangsarbeitslager)
