--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/09.10.2013 - Propaganda im kalten Krieg.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/09.10.2013 - Propaganda im kalten Krieg.md
@@ -1,6 +1,6 @@
 # Propaganda im kalten Krieg
 
-* Sowjetische Machdemonstration
+* Sowjetische Machtdemonstration
 * Stalin will seinen Machtbereich über ganz Europa ausdehnen
 * Amerikanische Touristen (Soldaten) Reisen in die Besatzungszonen
 
@@ -20,11 +20,11 @@
 * Volksrepublik China wird gegründet
 * Mao- Stalin- Rivalität
 * "Proletarische Kulturrevolution" fordert tausende Tode
-* Mao zeigt sich überrrascht von Korea-Krieg
+* Mao zeigt sich überrascht von Korea-Krieg
 * USA schickt 250.000 Soldaten nach Südkorea
 * Korea-Krieg = Höhepunkt des kalten Kriegs
-* Krieg in Korea soll nach GI-Aussagen härter als der 2. WK gewesen sein
-* Kriegsadauer 2 1/2 Jahre
+* Krieg in Korea soll nach GI-Aussagen härter als der Zweiten Weltkriegs gewesen sein
+* Kriegs-Dauer 2 1/2 Jahre
 
 * Systematische Militarisierung der DDR
 * FDJ wird immer Militaristischer
@@ -47,6 +47,6 @@
 * Stalin Allee im Zuckerbäckerstil → Paradestraße um Macht des sozialistischen Blocks zu demonstrieren
 * Nach Tod Stalins: Kreml ist Gesprächsbereit
 
-* Wettrennen um den Mond (bspw. Kosmonaut Gagarin) soll sowietische Überlegenheit demonstrieren
+* Wettrennen um den Mond (bspw. Kosmonaut Gagarin) soll sowjetische Überlegenheit demonstrieren
 
 * Teilung Deutschlands
