--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/14.11.2013 - Adenauers Außen- und Deutschlandpolitik.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/14.11.2013 - Adenauers Außen- und Deutschlandpolitik.md
@@ -6,7 +6,7 @@ Bedingungsfaktoren
 
 -   Ideologische Abhängigkeit von Supermächten (USA)
 -   Expansionsdrang der UdSSR
--   Skepsis gegenüber deutschen Demokratiebewusstsein
+-   Skepsis gegenüber deutschen Demokratie-Bewusstsein
 
 Strategie
 ---------
