--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/15.01.2014 - Zehn-Punkte-Plan.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/15.01.2014 - Zehn-Punkte-Plan.md
@@ -12,15 +12,15 @@ Helmut Kohl: Der Zehn-Punkte-Plan
 -   BRD wird weiterhin mit der DDR kooperieren
     (besonders im Bezug zu Wirtschaft,
     Wissenschaft und Technologie)
--   Machtmonopol der SED muss aufgehoben werden
+-   Macht-Monopol der SED muss aufgehoben werden
 -   Forderung nach freien, gleichen und geheimen
     Wahlen
--   Deutschland muss sich an die Gesamtarchitektur
+-   Deutschland muss sich an die Gesamt-Architektur
     Europas anpassen
 -   Überwindung der Trennung Europas
 -   Abrüstung und Rüstungskontrolle
--   KSZE-Prozeß muss feiter fortgeführt werden
--   Bei einem Unumkerbahren Vorgang (vermutlich
+-   KSZE-Prozeß muss weiter fortgeführt werden
+-   Bei einem Unumkehrbaren Vorgang (vermutlich
     Wiedervereinigung) unterstützt BRD die DDR
 -   DDR: Abschaffung des politischen Strafrechts
 -   Perspektive für die weitere Zusammenarbeit:
