--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/16.01.2014 - Haltung der NATO-Partner zur Wiedervereinigung.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/16.01.2014 - Haltung der NATO-Partner zur Wiedervereinigung.md
@@ -8,7 +8,7 @@ Haltungen zur Wiedervereinigung:
 
 1. Selbstbestimmung ohne Ergebnis vorwegzunehmen
 2. Bekenntnis Deutschlands zur NATO und EG, Rechte der Alliierten berücksichtigen
-3. Friedlich, allmälich, schrittweise zur Wiedervereinigung
+3. Friedlich, allmählich, schrittweise zur Wiedervereinigung
 4. Bekenntnis zu den Grenzen nach der Helsinki-Akte
 
 ### Sonstige Haltungen:
