--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/19.12.2013 - Ursachen der Revolution der DDR.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/19.12.2013 - Ursachen der Revolution der DDR.md
@@ -4,7 +4,7 @@
 * Fehlende Partizipation
 * Ausschalten politisch Andersdenkender (Verfolgen/Bespitzeln)
 * Recht = Wille der Arbeiterklasse
-* Keine Gerichtsautonomie
+* Keine Gerichts Autonomie
 * Keine freie Wahlen
 * UdSSR gewährt Entscheidungsfreiheit (politisches System)
 * Oligarchie- Vorwurf (Opposition)
@@ -18,13 +18,13 @@
 
 * Keine Meinungsfreiheit
 * Weltanschauung aufgezwungen
-* Unliebsame Personen: Außschluss auf Öffentlichkeit
+* Unliebsame Personen: Ausschluss auf Öffentlichkeit
     -   Ausbürgerung
     -   Loskauf der BRD
     -   Deportation
     -   Psychisch Krank
 * Rechtesystem untergeordnet
-* Misstrauen, Angst, Schitzophrenie
+* Misstrauen, Angst, Schizophrenie
 * 2- Klassengesellschaft im Bezug auf Lebensstandard
 * Unglaubwürdigkeit der DDR-Führung (Grund: Diskrepanz zwischen Lebensstandard und Vermittler Ideologie
 * Schwächung der Akzeptanz ideologischer Grundhaltungen
@@ -32,11 +32,11 @@
 
 ## Wirtschaftliche Ursachen
 
-* Mangelnder Zugang zu Konsumsystem der breiten Masse -> Geringer Lebensstandard
+* Mangelnder Zugang zu Konsum System der breiten Masse -> Geringer Lebensstandard
 * Unzufriedenheit über die wirtschaftliche Lage
 * Unterschiedliche Warenangebote je nach Zugang (Devisen, Beziehungen)
 
 ## Hauptursache
 
-Oktroyiertes politisches System (Sozialismus), das keine Rücksicht nimmt auf historische, 
-gesellschaftliche und wurtschaftliche Entwicklungen und dessen Führung sich reformunwillig zeigt.
+Oktroyiertes politisches System (Sozialismus), das keine Rücksicht nimmt auf historische,
+gesellschaftliche und wirtschaftliche Entwicklungen und dessen Führung sich Reformunwillig zeigt.
