--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/21.01.2014 - Zwei-plus-Vier-Vertrag.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/21.01.2014 - Zwei-plus-Vier-Vertrag.md
@@ -6,8 +6,8 @@ Inhalte des Zwei-plus-Vier-Vertrags
 
 -   Keine ABC Waffen (Atomare, Biologische und Chemische Waffen)
 -   Festlegung der Oder-Neißel-Grenze
--   Recht auf Bündnisfreiheit
--   Souveräniät Deutschlands
+-   Recht auf Bündnis Freiheit
+-   Souveränität Deutschlands
 -   Vertrag gilt für ganz Deutschland
 -   Vom Deutschen Boden geht nur noch Frieden aus → Angriffskriege sind
     Verfassungswiedrig
