--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/21.11.2013 - Sowjetische und Amerikanische Deutschlandpolitik (1955-1961).md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/21.11.2013 - Sowjetische und Amerikanische Deutschlandpolitik (1955-1961).md
@@ -11,7 +11,7 @@ Positionen zur Wiedervereinigung
 -   Keine Militärbündnisse die gegen einen der Teilnehmenden Staaten
     gerichtet ist (Neutralität)
 -   Grenzen sollen wie am 1. Januar 1959 sein
--   Bis zur Wederherstellung der deutschen Einheit erhält West-Berlin
+-   Bis zur Wiederherstellung der deutschen Einheit erhält West-Berlin
     die Stellung einer entmilitarisierten Freien Stadt
 
 US-Amerikanische Deutschlandpolitik (1955-1961)
@@ -20,7 +20,7 @@ US-Amerikanische Deutschlandpolitik (1955-1961)
 -   Freie Wahlen zur Wiedervereinigung
 -   Einsetzung eines gesamt deutschen Ausschusses für Modalitäten der
     Wiedervereinigung
--   Freie Wahlen für freies, demokratisches, förderalistisches System
+-   Freie Wahlen für freies, demokratisches, föderalistisches System
 -   Souveränität nach der Wiedervereinigung
 
 Position zu Berlin
@@ -36,7 +36,7 @@ Position zu Berlin
     anerkennen
 -   Die UdSSR gestattet West-Berlin eine Selbstverwaltung durch einen
     eigenen Verwaltungsapperat
--   Ultimatum (6 Monate) zur Lösung der Berlin-Frage, dannach Abtrennung
+-   Ultimatum (6 Monate) zur Lösung der Berlin-Frage, danach Abtrennung
     West-Berlins
 
 ### "Three essentials" (Fernsehansprache von J.F. Kennedy am 25.07.1961)
