--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/25.09.2013 - Nachkriegspolitik der Alliierten.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/25.09.2013 - Nachkriegspolitik der Alliierten.md
@@ -6,7 +6,7 @@ Erklärung über Europa (im Rahmen der Konferenz in Jalta entstanden)
 
 -   Ziel: Ordnung in Europa
 -   Politik der drei Regierungen ist gleichzuschalten
--   Die einzelnen Ideologien sollen eine untergeordetne Rolle zu
+-   Die einzelnen Ideologien sollen eine untergeordnete Rolle zu
     Beseitigung der Faschistischen und Nationalsozialistische Reste in
     Europa einnehmen
 -   Rückgabe der Souveränität: Deutsche und andere Völker die unter den
