--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/27.11.2013 - Bau der Berliner Mauer.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/27.11.2013 - Bau der Berliner Mauer.md
@@ -21,7 +21,7 @@ Konsequenzen:
 
 ### DDR:
 
--   Leugnung des Baus einer Mauer
+-   Leugnung des Mauerbaus
 
 Reaktionen auf den Mauerbau:
 ----------------------------
