--- a/Geschichte/Nachkriegspolitik und Wiedervereinigung/14.11.2013 - Petersberger Abkommen, der EVG und der Deutschlandvertrag.md
+++ b/Geschichte/Nachkriegspolitik und Wiedervereinigung/14.11.2013 - Petersberger Abkommen, der EVG und der Deutschlandvertrag.md
@@ -6,7 +6,7 @@ Notizen
 
 ### Der Ruhrstatut
 
--   Hilfsquellen der Ruhr nicht für Angriffszwecke
+-   Hilfsquellen der Ruhr nicht für Angriffs-Zwecke
 -   Reduzierung der Demontage
 
 ### Petersberger Abkommen
@@ -17,7 +17,7 @@ Notizen
     Handelsbeziehungen werden von der Bundesregierung schrittweise
     wiederaufgenommen
 
-### Sicherheitsmemorandum von Adenauer
+### Sicherheit Memorandum von Adenauer
 
 -   Bereitschaft von Adenauer zur Bildung einer internationalen
     Westeuropäischen Armee
